--- a/frontend/package.json
+++ b/frontend/package.json
@@ -35,5 +35,8 @@
     "typescript": "^3.7.4",
     "webpack": "^4.41.5",
     "webpack-cli": "^3.3.10"
+  },
+  "dependencies": {
+    "@material-ui/core": "^4.8.3"
   }
 }
