--- a/frontend/tsconfig.json
+++ b/frontend/tsconfig.json
@@ -9,5 +9,5 @@
         "moduleResolution": "node",
         "lib": ["es2017", "dom"]
     },
-    "include": ["src/background", "src/contentscript"]
+    "include": ["src/background.ts", "src/contentscript.ts"]
 }
